# hillclimbracing

./: .gitignore  Hill Climb Racing.py  HillClimb_RL.py  README.md  TestingPygameBox2d.py  __init__.py  agent.py  car.py  ground.py  gym_env.py  gym_wrapper.py  main.py  person.py  player.py  pyproject.toml  testbench.py  wheels.py  world.py
envs/: __init__.py  agent.py  car.py  ground.py  hill_racing.py  person.py  wheels.py
hill_racing_gym/: setup.py
hill_racing_gym/hill_racing_env/: __init__.py
hill_racing_gym/hill_racing_env.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hill_racing_gym/hill_racing_env/envs/: agent.py  car.py  experiments.py  graph_maker.py  ground.py  hill_racing.py  hill_racing_human.py  perlin.py  person.py  ppo_action_continuous.monitor.csv  ppo_action_continuous_best.monitor.csv  ppo_angle.monitor.csv  ppo_base.monitor.csv  ppo_base_1.monitor.csv  ppo_base_2.monitor.csv  ppo_base_2_soft_1000_4.monitor.csv  ppo_base_3.monitor.csv  ppo_base_300_0.monitor.csv  ppo_base_300_1.monitor.csv  ppo_base_300_4.monitor.csv  ppo_base_4.monitor.csv  ppo_base_500k.monitor.csv  ppo_base_action0.monitor.csv  ppo_base_action1.monitor.csv  ppo_base_action2.monitor.csv  ppo_base_action3.monitor.csv  ppo_base_action4.monitor.csv  ppo_base_action_1.monitor.csv  ppo_base_action_2.monitor.csv  ppo_base_action_300_0.monitor.csv  ppo_base_action_300_1.monitor.csv  ppo_base_action_300_4.monitor.csv  ppo_base_action_diff_increasing_soft_1000_3.monitor.csv  ppo_base_action_diff_increasing_soft_1000_4.monitor.csv  ppo_base_action_soft0.monitor.csv  (+67 more)
(+296 files in other folders)
