[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hill_climb_racing_env"
version = "0.0.1"
authors = [
  { name="Alex Zheng"},
]
description = "A Gymnasium environment for the game Hill Climb Racing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/alexzh3/hillclimbracing"
Issues = "https://github.com/alexzh3/hillclimbracing/issues"